--- a/UwUber/Info.plist
+++ b/UwUber/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow Location Sharing</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Allow Location Sharing</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow Location Sharing</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Allow Location Sharing</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
